--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #f4f4f4;
-  color: #333;
+  background-color: #f5f5f5;
+  color: #212121;
   margin: 0;
   padding: 0;
 }
@@ -12,7 +12,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #444;
+  color: #212121;
 }
 
 table {
@@ -24,28 +24,28 @@ table {
 table,
 th,
 td {
-  border: 1px solid #ddd;
+  border: 1px solid #bdbdbd;
   padding: 10px 15px; /* Adjusting the padding for table cells */
   vertical-align: middle; /* Vertical centering */
 }
 
 table tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: #e0e0e0;
 }
 
 table tr:hover {
-  background-color: #ddd;
+  background-color: #bdbdbd;
 }
 
 button {
   background-color: white;
-  color: black;
+  color: #212121;
   cursor: pointer;
   padding: 5px 10px; /* Adding some padding to the button */
 }
 
 button:hover {
-  background-color: #887efb;
+  background-color: #9fa8da;
   color: white; /* Changing text color on hover */
 }
 
@@ -58,18 +58,20 @@ button:hover {
   padding: 20px;
 }
 
-.drafted-players {
-  background-color: #333; /* or your preferred darker color */
-  color: #fff; /* adjust text color for better contrast */
+.drafted-players,
+.drafted-players h2 {
+  background-color: #212121; /* or your preferred darker color */
+  color: #f5f5f5; /* adjust text color for better contrast */
   width: 225px;
   padding: 20px;
   overflow-y: auto; /* to handle overflow content, if any */
   flex: none;
 }
 
-.your-team {
-  background-color: #333; /* or your preferred darker color */
-  color: #fff; /* adjust text color for better contrast */
+.your-team,
+.your-team h2 {
+  background-color: #212121; /* or your preferred darker color */
+  color: #f5f5f5; /* adjust text color for better contrast */
   width: 200px;
   overflow-y: auto; /* to handle overflow content, if any */
   flex: none;
@@ -78,7 +80,7 @@ button:hover {
 .main-content {
   flex: 3; /* this allows the main content to take up thrice the space as the sides */
   padding: 20px;
-  background-color: #f4f4f4; /* or your preferred lighter color */
+  background-color: #f5f5f5; /* or your preferred lighter color */
 }
 
 .reset-btn {
@@ -101,7 +103,7 @@ button:hover {
 /* Additional adjustments for the Add to Team button (optional) */
 #draftedPlayersList button {
   border: none;
-  color: white;
+  color: #212121;
   padding: 5px 10px;
   text-align: center;
   text-decoration: none;
