remove bullets from yourteam

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -133,3 +133,8 @@ button:hover {
 .optimize-button:hover {
   background-color: #283593; /* Slightly darker color on hover */
 }
+
+#yourTeamList {
+  list-style-type: none; /* Removes the bullet points */
+  padding-left: 0; /* Removes the default padding */
+}
